tests/typing/fail/block_call_self_meth_fail.rb

class A
  def each() 
    yield(@contents); 
  end
end

class B
  def z() end
  def f() 
    z
    A.new.each { |x| w() }
  end
end

B.new.f
